画面の追加と遷移

--- a/WebContent/sampledisp/pg-int.webflow/grouplist.html
+++ b/WebContent/sampledisp/pg-int.webflow/grouplist.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Tue May 19 2015 07:37:33 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Jun 08 2015 04:24:06 GMT+0000 (UTC) -->
 <html data-wf-site="5529405753ab13dd4efff00c" data-wf-page="553402e0fd7ee5b552c34048">
 <head>
   <meta charset="utf-8">
@@ -26,20 +26,20 @@
   <div class="w-section">
     <div class="w-container">
       <h1 class="teamlisthead">チーム一覧</h1>
-      <div class="w-clearfix"><a class="button" href="#">新規チーム作成</a>
+      <div><a class="button" href="#">新規チーム作成</a>
       </div>
     </div>
   </div>
   <div class="w-section">
     <div class="w-container">
-      <div class="w-row">
+      <div class="w-row teamlinedecoration">
         <div class="w-col w-col-3">
-          <div>
-            <h1 class="teamnameing">HTMLer</h1>
+          <div class="taemlistdecoration">
             <div>
-              <p>HTMLが好きなチームです。</p>
+              <h1 class="teamnameing">HTMLer</h1>
+              <p class="teamexplanationparagraph">HTMLが好きなチームです。</p>
               <div>
-                <div class="w-row">
+                <div class="w-row smallinformatinoarea">
                   <div class="w-col w-col-6">
                     <div class="teamhowmuch">人数　４人</div>
                   </div>
@@ -55,7 +55,7 @@
           <div>
             <h1 class="teamnameing">Javaer</h1>
             <div>
-              <p>HTMLが好きなチームです。</p>
+              <p class="teamexplanationparagraph">HTMLが好きなチームです。</p>
               <div>
                 <div class="w-row">
                   <div class="w-col w-col-6">
@@ -179,59 +179,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="w-row">
-        <div class="w-col w-col-3">
-          <div>
-            <h1 class="teamnameing">HTMLer</h1>
-            <div>
-              <p>HTMLが好きなチームです。</p>
-              <div>
-                <div class="w-row">
-                  <div class="w-col w-col-6">
-                    <div class="teamhowmuch">人数　４人</div>
-                  </div>
-                  <div class="w-col w-col-6">
-                    <div class="statusoftem">募集中</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-      </div>
-      <div class="w-row">
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-      </div>
-      <div class="w-row">
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-      </div>
-      <div class="w-row">
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-      </div>
-      <div class="w-row">
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-      </div>
-      <div class="w-row">
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
-        <div class="w-col w-col-3"></div>
       </div>
     </div>
   </div>
