--- a/WebContent/sampledisp/pg-int.webflow/reginster.html
+++ b/WebContent/sampledisp/pg-int.webflow/reginster.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Tue May 19 2015 07:37:33 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Jun 08 2015 04:24:06 GMT+0000 (UTC) -->
 <html data-wf-site="5529405753ab13dd4efff00c" data-wf-page="5533380986ac3db85c98f433">
 <head>
   <meta charset="utf-8">
@@ -58,6 +58,10 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="w-row">
+    <div class="w-col w-col-6"></div>
+    <div class="w-col w-col-6"></div>
   </div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/webflow.js"></script>
