--- a/WebContent/sampledisp/pg-int.webflow/accountSetting.html
+++ b/WebContent/sampledisp/pg-int.webflow/accountSetting.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Tue May 19 2015 07:37:33 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Jun 08 2015 04:24:07 GMT+0000 (UTC) -->
 <html data-wf-site="5529405753ab13dd4efff00c" data-wf-page="5533f54d6ca197b65278dc76">
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
         <div class="changaccountinfowrapper">
           <div class="w-form">
             <form id="email-form" name="email-form" data-name="Email Form">
-              <label for="name">氏名(ユーザー名 )</label>
+              <label for="name">ユーザ名</label>
               <input class="w-input" id="name" type="text" placeholder="Yuki Matsuyama" name="name" data-name="Name">
               <input class="w-button" type="submit" value="名前の変更" data-wait="Please wait...">
               <div class="changeemail">アドレスの変更</div>
