--- a/WebContent/sampledisp/pg-int.webflow/courselist.html
+++ b/WebContent/sampledisp/pg-int.webflow/courselist.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Tue May 19 2015 07:37:33 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Jun 08 2015 04:24:07 GMT+0000 (UTC) -->
 <html data-wf-site="5529405753ab13dd4efff00c" data-wf-page="5533d299777d17b75ce87bf0">
 <head>
   <meta charset="utf-8">
@@ -28,12 +28,12 @@
       <h1 class="catchphrasemypage">コース選択</h1>
       <div class="w-row courseexplanationcontainer">
         <div class="w-col w-col-6 column1">
-          <h1>Programming</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <h2>プログラミング</h2>
+          <p class="courseselectparagraph">Webアプリの作成などページを動的に変更することをメインに進めていきます。言語はJavaです。java以外は出来ないのでコース作成しません。</p>
         </div>
         <div class="w-col w-col-6 column1">
-          <h1>Design</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <h2>デザイン</h2>
+          <p class="courseselectparagraph">Html,Css,Javascriptをメインに勉強します。javascriptでページを動的に操作したりすることができます。最終的にはjQueryを勉強します。</p>
         </div>
       </div>
     </div>
@@ -47,20 +47,20 @@
               <div class="w-col w-col-6 html">
                 <a class="w-inline-block" href="#"><img src="https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg">
                 </a>
-                <div>HTML</div><a class="button choosecoursebtton" href="#">HTMLを受講する</a>
+                <div>Html</div><a class="button choosecoursebtton" href="#">Htmlを受講する</a>
               </div>
               <div class="w-col w-col-6"><img class="css" src="https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg">
-                <div>CSS</div><a class="button choosecoursebtton" href="#">CSSを受講する</a>
+                <div>CSS</div><a class="button choosecoursebtton" href="#">Cssを受講する</a>
               </div>
             </div>
           </li>
           <li>
             <div class="w-row">
               <div class="w-col w-col-6"><img src="https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg">
-                <div class="java">JAVA</div><a class="button choosecoursebtton" href="#">Java<br>を受講する</a>
+                <div class="java">Java</div><a class="button choosecoursebtton" href="#">Javaを受講する</a>
               </div>
               <div class="w-col w-col-6"><img src="https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg">
-                <div class="ruby">Ruby</div><a class="button choosecoursebtton" href="#">HTMLを受講する</a>
+                <div class="ruby">Android</div><a class="button choosecoursebtton" href="#">Androidを受講する</a>
               </div>
             </div>
           </li>
