--- a/WebContent/sampledisp/pg-int.webflow/index.html
+++ b/WebContent/sampledisp/pg-int.webflow/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Tue May 19 2015 07:37:33 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Jun 08 2015 04:24:07 GMT+0000 (UTC) -->
 <html data-wf-site="5529405753ab13dd4efff00c" data-wf-page="5529405753ab13dd4efff00e">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
       <div class="w-row">
         <div class="w-col w-col-6">
           <h2>Android Application</h2>
-          <p>AdnroidOSを使った開発はもはやスマートフォンだけに止まりません。Wearableといった時計から車やロボットにいたるところでの導入が開始されています。一緒にAndroidの開発を学びましょう.</p>
+          <p class="indexparagraph">AdnroidOSを使った開発はもはやスマートフォンだけに止まりません。Wearableといった時計から車やロボットにいたるところでの導入が開始されています。一緒にAndroidの開発を学びましょう.</p>
           <div class="w-row">
             <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
               <div class="icon-title">Album</div><img src="images/album.png" width="57">
@@ -66,7 +66,7 @@
         </div>
         <div class="w-col w-col-6">
           <h2>Web Programming</h2>
-          <p>最近は優れた見かけや機能を持ったWebサイトを見かけることも多くなってきました。canvasを使うことで、今までにないWebサイトを見かけるようになってきました。一緒にクリエイティブなWebサイトを作りましょう。</p>
+          <p class="indexparagraph">最近は優れた見かけや機能を持ったWebサイトを見かけることも多くなってきました。canvasを使うことで、今までにないWebサイトを見かけるようになってきました。一緒にクリエイティブなWebサイトを作りましょう。</p>
           <div class="w-row">
             <div class="w-col w-col-4 w-col-small-4 w-col-tiny-4">
               <div class="icon-title">Standard</div><img src="images/basic.png" width="57px">
@@ -85,14 +85,14 @@
   <div class="w-section section">
     <div class="w-container">
       <div class="w-row">
-        <div class="w-col w-col-6 w-clearfix">
+        <div class="w-col w-col-6">
           <h2>Share Contents</h2>
-          <p>プログラミングは孤独な作業になってしまうと長く続きません。特に独学で学んでいる人は”プログラミング=辛い"という結果になりかねません。ここで仲間を見つけて一緒に開発を楽しみましょう。</p>
+          <p class="indexparagraph">プログラミングは孤独な作業になってしまうと長く続きません。特に独学で学んでいる人は”プログラミング=辛い"という結果になりかねません。ここで仲間を見つけて一緒に開発を楽しみましょう。</p>
           <div class="w-widget w-widget-twitter social-widget">
             <iframe src="https://platform.twitter.com/widgets/tweet_button.html#url=http%3A%2F%2Fwebflow.com&amp;counturl=webflow.com&amp;text=Check%20out%20this%20site&amp;count=vertical&amp;size=m&amp;dnt=true" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 55px; height: 62px;"></iframe>
           </div>
           <div class="w-widget w-widget-gplus social-widget">
-            <div class="g-plusone" data-href="http://webflow.com" data-size="tall" data-annotation="bubble" data-width="120" data-recommendations="false" id="___plusone_2" style="width: 50px; height: 60px; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; background: transparent;"></div>
+            <div class="g-plusone" data-href="http://webflow.com" data-size="tall" data-annotation="bubble" data-width="120" data-recommendations="false" id="___plusone_0" style="width: 50px; height: 60px; text-indent: 0px; margin: 0px; padding: 0px; border-style: none; float: none; line-height: normal; font-size: 1px; vertical-align: baseline; display: inline-block; background: transparent;"></div>
           </div>
           <div class="w-widget w-widget-facebook social-widget">
             <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Fwebflow&amp;layout=box_count&amp;locale=en_US&amp;action=like&amp;show_faces=false&amp;share=false" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 55px; height: 65px;"></iframe>
